# http-server

./: Cargo.toml  README.md
rust/: Cargo.toml  flake.nix
rust/src/: message.rs  method.rs  request_uri.rs  server.rs
rust/src/cmd/: main.rs
src/: lib.rs  router.rs  server.rs  start_line.rs  status_code.rs  utils.rs
src/cmd/: main.rs
src/message/: mod.rs  request.rs  request_uri.rs  response.rs  status_code.rs  version.rs
