[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Archisman-Mridha <archismanmridha12345@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "vertex"
path = "./src/lib.rs"

[[bin]]
name = "codecrafters-http-server"
path = "./src/cmd/main.rs"

[dependencies]
anyhow = "1.0.68"                                                                # error handling
bytes = "1.3.0"                                                                  # helps manage buffers
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"
hex = "0.4.3"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"                                                              # error handling
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "time"] }
typed-builder = "0.20.0"
